# edid-info

./: Cargo.toml  README.md
scripts/: check_invalid_manufacture_ids.sh
src/: lib.rs  main.rs
src/edid/: base.rs  basic.rs  bits.rs  check.rs  chroma.rs  dtd.rs  established.rs  footer.rs  header.rs  mod.rs  standard.rs  std1.rs
src/edid/cta/: audio.rs  block.rs  header.rs  mod.rs  room.rs  speaker.rs  vendor.rs  vic.rs  video.rs
src/edid/descriptor/: color.rs  cvt3.rs  mod.rs  monitor.rs  range.rs  std2.rs  std3.rs  timing.rs  white_point.rs
src/edid/displayid/: block.rs  interface.rs  mod.rs  params.rs  product.rs  timing.rs
tests/: base.rs  basic.rs  chroma.rs  cta.rs  descriptor.rs  dtd.rs  edid.rs  established.rs  footer.rs  header.rs  standard.rs  std1.rs
tests/cta/: audio.rs  block.rs  header.rs  mod.rs  room.rs  speaker.rs  vendor.rs  vic.rs  video.rs
tests/data/: ACER_EK221Q_H.edid  CM__CM2400T.edid  CS__1920x1080.edid  LENOVO_LP156WF9_SPK2.edid  MS__HSD_1903-A00.edid  PHL_22PFL3606.edid  ROL_ROLSEN_C707N.edid  SDC_123YL01.edid  TK@_tianma.edid  VIT_VT988.edid  WG@_UNKNOWN.edid  asus_rog_pg27u.edid
tests/descriptor/: color.rs  cvt3.rs  mod.rs  monitor.rs  range.rs  std2.rs  std3.rs  timing.rs  white_point.rs
tests/displayid/: block.rs  interface.rs  mod.rs  params.rs  product.rs  timing.rs
